Also auto added users to Tournament market as well as effect of restructure and I don't want to spend too long trying to fix

--- a/client/src/pages/LoginPage/Login.css
+++ b/client/src/pages/LoginPage/Login.css
@@ -104,6 +104,18 @@
     color: rgb(100, 216, 100);
 }
 
+.login-success-btn {
+    color: #fff;
+    background-color: #359735;
+    border: none;
+    padding: 1%;
+    cursor: pointer;
+}
+
+.login-success-btn {
+    background-color: #3ab73a;
+}
+
 @media (max-width: 1000px) {
     .signup-container {
         grid-template-columns: 100%;
